--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=ex04
 
 # 포트변경. 기본포트 8080
-server.port=9090
+server.port=8089
 
 # oracle 연동을 위한 설정정보
 # spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
@@ -18,7 +18,7 @@ server.port=9090
 #spring.datasource.url=jdbc:mysql://localhost:3306/testdb?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
 #spring.datasource.username=test
 #spring.datasource.password=1234
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
 # 아마존 RDS용
