--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=ex04
 
 # 포트변경. 기본포트 8080
-server.port=8080
+server.port=80
 
 # oracle 연동을 위한 설정정보
 # spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
@@ -14,19 +14,25 @@ server.port=8080
 #spring.datasource.password=spring
 
 # ezen-server-db.c70ie4kg2hkw.ap-northeast-2.rds.amazonaws.com
+
 # 개발용(로컬) MySQL8 설정
 #spring.datasource.url=jdbc:mysql://localhost:3306/testdb?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
 #spring.datasource.username=test
 #spring.datasource.password=1234
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+
+# 아래 주소만 회사 소스로 바꿔주면 소스는 내 컴퓨터지만, db는 AWS에서 돌아가는 것임.
+#spring.datasource.url=${mysql_url}
+#spring.datasource.username=qwqwqwqw
+#spring.datasource.password=qqqqqqqq
 
 # 아마존 RDS용
 spring.datasource.url=${mysql_url}
 spring.datasource.username=${mysql_username}
 spring.datasource.password=${mysql_password}
 
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # mybatis 를 위한 설정정보
 mybatis.mapper-locations=classpath:/mapper/mysql/*.xml
@@ -43,4 +49,4 @@ mybatis.mapper-locations=classpath:/mapper/mysql/*.xml
 
 
 # Ckeditor 파일업로드 경로. 임의로 이름생성
-file.ckdir=C:\\Dev\\upload\\ckeditor\\
+#file.ckdir=C:\\Dev\\upload\\ckeditor\\
